fix white space in timeline and whiteboard offset

--- a/client/stylesheets/styles.less
+++ b/client/stylesheets/styles.less
@@ -12,7 +12,7 @@ body,input,select,textarea {
 }
 
 h1,h2,h3,h4,h5,h6{
-  line-height: 1.5;
+  //line-height: 1.5;
 }
  /* end font stack*/
 
@@ -33,7 +33,7 @@ html.no-cssgradients{
   border-color: #aaa;
 }
 html*{
-  margin: 5;
+  //margin: 5;
 }
 
 body {
@@ -41,8 +41,8 @@ body {
   color: #333333;
   margin: 0 auto;
   max-width: 85%;
-  overflow-x:hidden; 
-  padding: 10px;
+  //overflow-x:hidden; 
+  padding: 7px;
   -moz-box-shadow: 0 0 0.3em #255b17;
   -webkit-box-shadow: 0 0 0.3em #255b17;
   box-shadow: 0 0 0.3em #255b17;
@@ -69,8 +69,8 @@ body {
     border-top: solid 1px #9a9;
     font: italic normal 230% 'Times New Roman', Times, serif;
     letter-spacing: 0.2em;
-    margin: 10px;
-    padding: 15px 10px 15px 60px;
+    //margin: 10px;
+    //padding: 15px 10px 15px 60px;
   
 }
 
